add: font families

--- a/game.html
+++ b/game.html
@@ -107,20 +107,20 @@
                             </div>
                             <div class="col-8">
                                 <div class="row h-50">
-                                    <div class="col-2 border-end border-danger border-1">P<span class="d-none d-md-inline-block">layed</span></div>
-                                    <div class="col-2 border-end border-danger border-1">W<span class="d-none d-md-inline-block">on</span></div>
-                                    <div class="col-2 border-end border-danger border-1">D<span class="d-none d-md-inline-block">rawn</span></div>
-                                    <div class="col-2 border-end border-danger border-1">L<span class="d-none d-md-inline-block">ost</span></div>
-                                    <div class="col-2 border-end border-danger border-1">G<span class="d-none d-md-inline-block">oals</span></div>
-                                    <div class="col-2 border-end border-danger border-1">P<span class="d-none d-md-inline-block">oints</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">P<span class="d-none d-md-inline-block">layed</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">W<span class="d-none d-md-inline-block">on</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">D<span class="d-none d-md-inline-block">rawn</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">L<span class="d-none d-md-inline-block">ost</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">G<span class="d-none d-md-inline-block">oals</span></div>
+                                    <div class="col-2 border-end border-danger border-1 game-header">P<span class="d-none d-md-inline-block">oints</span></div>
                                 </div>
                                 <div class="row h-50">
-                                    <div class="col-2 border-end border-danger border-1" id="played">0</div>
-                                    <div class="col-2 border-end border-danger border-1" id="won">0</div>
-                                    <div class="col-2 border-end border-danger border-1" id="drawn">0</div>
-                                    <div class="col-2 border-end border-danger border-1" id="lost">0</div>
-                                    <div class="col-2 border-end border-danger border-1" id="score">0</div>
-                                    <div class="col-2 border-end border-danger border-1" id="points">0</div>
+                                    <div class="col-2 border-end border-danger border-1 game-header" id="played">0</div>
+                                    <div class="col-2 border-end border-danger border-1 game-header" id="won">0</div>
+                                    <div class="col-2 border-end border-danger border-1 game-header" id="drawn">0</div>
+                                    <div class="col-2 border-end border-danger border-1 game-header" id="lost">0</div>
+                                    <div class="col-2 border-end border-danger border-1 game-header" id="score">0</div>
+                                    <div class="col-2 border-end border-danger border-1 game-header" id="points">0</div>
                                 </div>
                             </div>
 
@@ -134,9 +134,9 @@
                         <div class="row border-start border-danger border-1 h-100">
                             <div class="col-12 col-md-9">
                                 <div class="row border-top border-bottom border-danger border-1 h-50">
-                                    <div class="col-4 border-end border-danger border-3">Match 1</div>
-                                    <div class="col-4 border-end border-danger border-3">Match 2</div>
-                                    <div class="col-4"> Match 3</div>
+                                    <div class="col-4 border-end border-danger border-3 game-header">Match 1</div>
+                                    <div class="col-4 border-end border-danger border-3 game-header">Match 2</div>
+                                    <div class="col-4 game-header"> Match 3</div>
                                 </div>
                                 <div class="row h-50">
                                     <div class="col-4 border-end border-danger border-3">
@@ -199,7 +199,7 @@
                                 </div>
                             </div>
                             <div class="d-none d-md-inline-block col-3 border-start border-danger border-3">
-                                <h6 class="d-inline align-middle pe-2">Derby Duel</h6>
+                                <h6 class="d-inline align-middle pe-2 game-header">Derby Duel</h6>
                             </div>
                         </div>
                     </div>
