style: theme colors used on game.html

--- a/game.html
+++ b/game.html
@@ -209,22 +209,20 @@
         <section class="game-section">
             <div class="container-fluid quiz-section">
                 <div class="row game-area">
-
-                    <div class="col-12 col-md-6 border border-danger border-1 position-relative p-0">
+                    <div class="col-12 col-md-6 border border-bottom-danger border-1 position-relative p-0 bg-color-2 txt-color-2">
                         <div class="col-12">
                             <h2 class="text-end me-5 question-number">Q<span id="question-counter">0</span></h2>
                             <p class="position-absolute m-5" id="question-paragraph"></p>
                         </div>
                     </div>
-
-                    <div class="col-12 col-md-6 p-0 border border-danger border-1 text-center">
-                        <div class="col-12 bg-color-2 txt-color-2 ps-2 h-13 answer-section">
+                    <div class="col-12 col-md-6 p-0 border border-1 text-center bg-color-1 txt-color-2">
+                        <div class="col-12 bg-color-2 txt-color-2 ps-2 h-13 answer-section border-bottom border-1">
                             <h3 class="select-answer">SELECT YOUR ANSWER</h3>
                         </div>
-                        <div class="col-12 border-bottom border-danger border-1 ps-2 h-29 choice-text" data-number="1">
+                        <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text" data-number="1">
                             <p></p>
                         </div>
-                        <div class="col-12 border-bottom border-danger border-1 ps-2 h-29 choice-text" data-number="2">
+                        <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text" data-number="2">
                             <p></p>
                         </div>
                         <div class="col-12 ps-2 h-29 choice-text" data-number="3">
