fix: css and html classes added to allow vertical centering of answer section

--- a/game.html
+++ b/game.html
@@ -212,21 +212,18 @@
                     <div class="col-12 col-md-6 border border-bottom-danger border-1 position-relative p-0 bg-color-2 txt-color-2">
                         <div class="col-12">
                             <h2 class="text-end me-5 question-number">Q<span id="question-counter">0</span></h2>
-                            <p class="position-absolute m-5" id="question-paragraph"></p>
+                            <p class="vertical-center m-5" id="question-paragraph"></p>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 p-0 border border-1 text-center bg-color-1 txt-color-2">
-                        <div class="col-12 bg-color-2 txt-color-2 ps-2 h-13 answer-section border-bottom border-1">
-                            <h3 class="select-answer">SELECT YOUR ANSWER</h3>
+                        <div class="col-12 bg-color-2 txt-color-2 ps-2 h-13 answer-section border-bottom border-1 position-relative">
+                            <h3 class="select-answer vertical-center">SELECT YOUR ANSWER</h3>
                         </div>
-                        <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text" data-number="1">
-                            <p></p>
+                        <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text position-relative" data-number="1">
                         </div>
-                        <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text" data-number="2">
-                            <p></p>
+                        <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text position-relative" data-number="2">
                         </div>
-                        <div class="col-12 ps-2 h-29 choice-text" data-number="3">
-                            <p></p>
+                        <div class="col-12 ps-2 h-29 choice-text position-relative" data-number="3">
                         </div>
                     </div>
                 </div>
