add: classes to center answer section horizontally and vertically

--- a/game.html
+++ b/game.html
@@ -142,57 +142,57 @@
                                     <div class="col-4 border-end border-danger border-3">
                                         <div class="row h-100" id="match-one">
                                             <div class="col-3 question-indicator" data-game="0">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator"
                                                 data-game="1">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator"
                                                 data-game="2">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator"
                                                 data-game="3">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-4 border-end border-danger border-3">
                                         <div class="row h-100">
                                             <div class="col-3 question-indicator" data-game="4">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator"
                                                 data-game="5">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator"
                                                 data-game="6">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator"
                                                 data-game="7">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-4">
                                         <div class="row h-100">
                                             <div class="col-3 question-indicator" data-game="8">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator"
                                                 data-game="9">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator"
                                                 data-game="10">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                             <div class="col-3 border-start border-danger border-1 question-indicator"
                                                 data-game="11">
-                                                <i class="fa-solid fa-futbol"></i>
+                                                <i class="fa-solid fa-futbol vertical-center center-text"></i>
                                             </div>
                                         </div>
                                     </div>
@@ -217,7 +217,7 @@
                     </div>
                     <div class="col-12 col-md-6 p-0 border border-1 text-center bg-color-1 txt-color-2">
                         <div class="col-12 bg-color-2 txt-color-2 ps-2 h-13 answer-section border-bottom border-1 position-relative">
-                            <h3 class="select-answer vertical-center">SELECT YOUR ANSWER</h3>
+                            <h3 class="select-answer vertical-center center-text">SELECT YOUR ANSWER</h3>
                         </div>
                         <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text position-relative" data-number="1">
                         </div>
