fix: height for match header adjusted for small devices

--- a/game.html
+++ b/game.html
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
-                        <div class="row border-start border-danger border-1 h-100">
+                        <div class="row border-start border-danger border-1 h-100 match-header">
                             <div class="col-12 col-md-9">
                                 <div class="row border-top border-bottom border-danger border-1 h-50">
                                     <div class="col-4 border-end border-danger border-3 game-header">Match 1</div>
@@ -198,8 +198,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="d-none d-md-inline-block col-3 border-start border-danger border-3">
-                                <h6 class="d-inline align-middle pe-2 game-header">Derby Duel</h6>
+                            <div class="d-none d-md-inline-block col-3 border-start border-danger border-3 position-relative">
+                                <h6 class="d-inline pe-2 game-header vertical-center center-text title">Derby Duel</h6>
                             </div>
                         </div>
                     </div>
