style: site colors applied to "try again" button on end.html

--- a/end.html
+++ b/end.html
@@ -116,7 +116,7 @@
                         <p>You scored <span id="end-points">12</span> points</p>
                         <p id="result-paragraph">You have been relagated to league one</p>
                         <a href="game.html">
-                            <button type="button" class="btn btn-primary txt-color-2">
+                            <button type="button" class="btn btn-primary txt-color-2 end-btn">
                                 Re-take Quiz
                             </button>
                         </a>
