add: updated rules in modal in game.html

--- a/game.html
+++ b/game.html
@@ -26,16 +26,23 @@
                 </div>
                 <div class="modal-body">
                     <ul>
-                        <li>You will have the chance to answer 12 questions</li>
-                        <li>Read the question and select an answer</li>
-                        <li>If correct, your team scored a goal and you earn 3 points</li>
-                        <li>At the end of the 12 questions</li>
-                        <li>Results:
+                        <li>Pick your team</li>
+                        <li>Score a goal and add <strong>1 point</strong> by answering correctly</li>
+                        </br>
+                        <li>3 matches (4 questions each)
                             <ul>
-                                <li>If you scored:</li>
-                                <li>25 - 36 - Champions League worthy</li>
-                                <li>13 - 24 - Premier League worthy</li>
-                                <li>12 points or less - You have been relegated!</li>
+                                <li><strong>3 points</strong> - 3 or 4 correct answers (match won)</li>
+                                <li><strong>1 point</strong> - 2 correct answers (match drawn)</li>
+                                <li><strong>0 points</strong> - incorrect or 1 correct answer (match lost)</li>
+                            </ul>
+                        </li>
+                        </br>
+                        <li>End Result:</li>
+                            <ul>
+                                <li><strong>3 points or less</strong> - your team is relegated to League One!</li>
+                                <li><strong>4 - 9 points</strong> - your team wins the Premiership!</li>
+                                <li><strong>10 - 18 points</strong> - your team wins the Europa League!</li>
+                                <li><strong>19 + points</strong> - your team wins the Championship!</li>
                             </ul>
                         </li>
                     </ul>
