--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <link href="assets/css/styles.css" rel="stylesheet">
 </head>
 
-<body>
-
+<body class="home-page">
     <header>
         <nav class="navbar fixed-top">
             <div class="container-fluid justify-content-end">
@@ -98,7 +97,27 @@
             <div class="row text-center pt-5 pb-5">
                 <div class="col txt-color-1">
                     <h2>How to Play</h2>
-                    <p>Play information goes here</p>
+                    <ul>
+                        <li>Pick your team</li>
+                        <li>Score a goal and add <strong>1 point</strong> by answering correctly</li>
+                        </br>
+                        <li>3 matches (4 questions each)
+                            <ul>
+                                <li><strong>3 points</strong> - 3 or 4 correct answers (match won)</li>
+                                <li><strong>1 point</strong> - 2 correct answers (match drawn)</li>
+                                <li><strong>0 points</strong> - incorrect or 1 correct answer (match lost)</li>
+                            </ul>
+                        </li>
+                        </br>
+                        <li>End Result:</li>
+                            <ul>
+                                <li><strong>3 points or less</strong> - your team is relegated to League One!</li>
+                                <li><strong>4 - 9 points</strong> - your team wins the Premiership!</li>
+                                <li><strong>10 - 18 points</strong> - your team wins the Europa League!</li>
+                                <li><strong>19 + points</strong> - your team wins the Championship!</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
