--- a/game.html
+++ b/game.html
@@ -95,7 +95,7 @@
                 <strong class="me-auto text-center">Match <span id="toast-header-match">2</span></strong>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
-            <div class="toast-body text-center">
+            <div class="toast-body vertical-center center-text">
                 <span id="match-quote">Take a bow, son!</span>
                 <p>You <span id="toast-body-result">won/lost</span> match <span id="toast-body-match">2</span></p>
             </div>
