--- a/game.html
+++ b/game.html
@@ -89,10 +89,10 @@
     </div>
 
     <div class="toast-container position-fixed top-50 start-50 translate-middle p-3">
-        <div id="match-toast" class="toast vh-100 vw-100" data-bs-autohide="false" role="alert" aria-live="assertive"
+        <div id="match-toast" class="toast vh-100 vw-100" data-bs-delay="10" role="alert" aria-live="assertive"
             aria-atomic="true">
             <div class="toast-header">
-                <strong class="me-auto text-center">Match <span id="toast-header-match">2</span></strong>
+                <strong class="me-auto center-text">Match <span id="toast-header-match">2</span></strong>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
             <div class="toast-body vertical-center center-text">
