fix: How to play wording simplified

--- a/game.html
+++ b/game.html
@@ -26,23 +26,16 @@
                 </div>
                 <div class="modal-body">
                     <ul>
-                        <li>Pick your team</li>
-                        <li>Score a goal and add <strong>1 point</strong> by answering correctly</li>
+                        <li>Answer correctly, goal scored! = <strong>1 point</strong></li>
+                        <li>Win a match = <strong>3 points</strong></li>
+                        <li>Draw a match = <strong>1 point</strong></li>
                         </br>
-                        <li>3 matches (4 questions each)
+                        <li>Results after 3 matches:</li>
                             <ul>
-                                <li><strong>3 points</strong> - 3 or 4 correct answers (match won)</li>
-                                <li><strong>1 point</strong> - 2 correct answers (match drawn)</li>
-                                <li><strong>0 points</strong> - incorrect or 1 correct answer (match lost)</li>
-                            </ul>
-                        </li>
-                        </br>
-                        <li>End Result:</li>
-                            <ul>
-                                <li><strong>3 points or less</strong> - your team is relegated to League One!</li>
-                                <li><strong>4 - 9 points</strong> - your team wins the Premiership!</li>
-                                <li><strong>10 - 18 points</strong> - your team wins the Europa League!</li>
-                                <li><strong>19 + points</strong> - your team wins the Championship!</li>
+                                <li><strong>3 points or less</strong> - relegated!</li>
+                                <li><strong>4 - 9 points</strong> - Premiership champions!</li>
+                                <li><strong>10 - 18 points</strong> - Europa League winners!</li>
+                                <li><strong>19 + points</strong> - Champions League winners!</li>
                             </ul>
                         </li>
                     </ul>
