add: functionality to highlight selected answer box as correct or incorrect

--- a/game.html
+++ b/game.html
@@ -219,11 +219,11 @@
                         <div class="col-12 bg-color-2 txt-color-2 ps-2 h-13 answer-section border-bottom border-1 position-relative">
                             <h3 class="select-answer vertical-center center-text">SELECT YOUR ANSWER</h3>
                         </div>
-                        <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text position-relative" data-number="1">
+                        <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text hover-color position-relative" data-number="1">
                         </div>
-                        <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text position-relative" data-number="2">
+                        <div class="col-12 border-bottom border-1 ps-2 h-29 choice-text hover-color position-relative" data-number="2">
                         </div>
-                        <div class="col-12 ps-2 h-29 choice-text position-relative" data-number="3">
+                        <div class="col-12 ps-2 h-29 choice-text hover-color position-relative" data-number="3">
                         </div>
                     </div>
                 </div>
