--- a/game.html
+++ b/game.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="toast-container position-fixed top-50 start-50 translate-middle p-3">
-        <div id="match-toast" class="toast vh-100 vw-100" data-bs-delay="10" role="alert" aria-live="assertive"
+        <div id="match-toast" class="toast vh-100 vw-100" data-bs-autohide="false" data-bs-delay="2" role="alert" aria-live="assertive"
             aria-atomic="true">
             <div class="toast-header">
                 <strong class="me-auto center-text">Match <span id="toast-header-match">2</span></strong>
@@ -90,7 +90,8 @@
             </div>
             <div class="toast-body vertical-center center-text">
                 <span id="match-quote">Take a bow, son!</span>
-                <p>You <span id="toast-body-result">won/lost</span> match <span id="toast-body-match">2</span></p>
+                <p class="fs-3 txt-color-3">You <span id="toast-body-result">won/lost</span> match <span id="toast-body-match">2</span></p>
+                <button type="button" class="btn btn-primary txt-color-2 mt-5" data-bs-dismiss="toast" aria-label="Close">Next Match</button>
             </div>
         </div>
     </div>
